--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.5",
     "next": "15.3.0",
